Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -168,7 +168,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyN4z1sEf1fbUSY767wY4DEE",
+      "authorship_tag": "ABX9TyO0wENhbtgePN7swDXRSY+r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7739,13 +7739,181 @@
         "id": "fK1tsdEkDWNs"
       },
       "source": [
+        "####  7576번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Uw2SWryEDWNt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c5414d77-13f2-4fd0-dd8d-060d1236dc87"
+      },
+      "source": [
+        "import sys\n",
+        "n, m = map(int, input().split())\n",
+        "\n",
+        "s = []\n",
+        "for _ in range(m):\n",
+        "    s.append(list(map(int, sys.stdin.readline().rstrip('\\n').split())))\n",
+        "    #s.append(list(map(int, input().split())))\n",
+        "\n",
+        "visited = [[False] * n for _ in range(m)]\n",
+        "\n",
+        "ripen = []\n",
+        "for i in range(m):\n",
+        "    for j in range(n):\n",
+        "        if s[i][j] == 1:\n",
+        "            ripen.append([i,j])\n",
+        "            visited[i][j] = True\n",
+        "\n",
+        "        elif s[i][j] == -1:\n",
+        "            visited[i][j] = True\n",
+        "        \n",
+        "\n",
+        "\n",
+        "def bfs(queue, t):\n",
+        "    f, e = 0, len(queue) #linked list\n",
+        "    while True:                                 # 무한 반복\n",
+        "        if f >= e:\n",
+        "            break                               # 무한 반복 종료\n",
+        "\n",
+        "        t += 1                                  # 거리 변수 + 1\n",
+        "        for _ in range(e - f):             # 해당 거리에 있는 위치의 개수만큼 반복\n",
+        "            popped = queue[f]               # queue에서 맨 앞에 요소 제거\n",
+        "            i, j = popped[0], popped[1]         # 방출된 요소 unpacking\n",
+        "\n",
+        "            for a, b in ([-1, 0], [1, 0], [0, 1], [0, -1]):             # 상, 하, 좌, 우 방향으로 진행\n",
+        "                if 0 <= i+a and i+a < m and 0 <= j+b and j+b < n:       # 해당 방향 요소가 배열 안에있고\n",
+        "                    if not s[i+a][j+b] and not visited[i+a][j+b]:    # 길인 '1' 이고 방문하지 않았다면\n",
+        "                        queue.append([i+a, j+b])                        # 해당 방향 위치를 queue에 append\n",
+        "                        visited[i+a][j+b] = True\n",
+        "                        e += 1                        # 해당 방향 방문 표시\n",
+        "            f += 1\n",
+        "    return t   \n",
+        "\n",
+        "res = bfs(ripen, -1)\n",
+        "\n",
+        "if visited == [[True]*n for _ in range(m)]:\n",
+        "    if not res:\n",
+        "        print(0)\n",
+        "    else:\n",
+        "        print(res)\n",
+        "\n",
+        "else:\n",
+        "    print(-1)"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6 4\n",
+            "0 -1 0 0 0 0\n",
+            "-1 0 0 0 0 0\n",
+            "0 0 0 0 0 0\n",
+            "0 0 0 0 0 1\n",
+            "-1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rwkVEu0iBDaO"
+      },
+      "source": [
         "#### "
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Uw2SWryEDWNt"
+        "id": "pgWGsQhCBDaU"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "itMtijYsBFg-"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ql5N8HwEBFg_"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7dWbBLClBFkC"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kBOkkInlBFkC"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_k8dhUVLBFnC"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pJrz5PBVBFnC"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4jMaIQKBBFqM"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pMbSw3yQBFqM"
       },
       "source": [
         ""
