Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -168,7 +168,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyO0wENhbtgePN7swDXRSY+r",
+      "authorship_tag": "ABX9TyNJFJoNJ3VotNlRDu02qvt1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7745,11 +7745,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Uw2SWryEDWNt",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c5414d77-13f2-4fd0-dd8d-060d1236dc87"
+        "id": "Uw2SWryEDWNt"
       },
       "source": [
         "import sys\n",
@@ -7805,21 +7801,8 @@
         "else:\n",
         "    print(-1)"
       ],
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "6 4\n",
-            "0 -1 0 0 0 0\n",
-            "-1 0 0 0 0 0\n",
-            "0 0 0 0 0 0\n",
-            "0 0 0 0 0 1\n",
-            "-1\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -7827,7 +7810,7 @@
         "id": "rwkVEu0iBDaO"
       },
       "source": [
-        "#### "
+        "####  7569번"
       ]
     },
     {
@@ -7836,7 +7819,72 @@
         "id": "pgWGsQhCBDaU"
       },
       "source": [
-        ""
+        "import sys\n",
+        "\n",
+        "m, n, h = map(int, input().split())\n",
+        "\n",
+        "visited = [[[False] * m for _ in range(n)] for _ in range(h)]\n",
+        "ripen = []\n",
+        "\n",
+        "s = [[] for _ in range(h)]\n",
+        "for k in range(h):\n",
+        "    for i in range(n):\n",
+        "        t = list(map(int, sys.stdin.readline().rstrip('\\n').split()))\n",
+        "        for j in range(m):\n",
+        "            if t[j] == 1:\n",
+        "                ripen.append([k, i, j])\n",
+        "                visited[k][i][j] = True\n",
+        "            elif t[j] == -1:\n",
+        "                visited[k][i][j] = True\n",
+        "\n",
+        "        s[k].append(t)\n",
+        "\n",
+        "\n",
+        "def bfs(queue, t):\n",
+        "    f, e = 0, len(queue)  # linked list\n",
+        "    while True:                                 # 무한 반복\n",
+        "        if f >= e:\n",
+        "            break                               # 무한 반복 종료\n",
+        "        t += 1                                  # 거리 변수 + 1\n",
+        "        for _ in range(e - f):             # 해당 거리에 있는 위치의 개수만큼 반복\n",
+        "            popped = queue[f]               # queue에서 맨 앞에 요소 제거\n",
+        "            # 방출된 요소 unpacking\n",
+        "            k, i, j = popped[0], popped[1], popped[2]\n",
+        "\n",
+        "            # 상, 하, 좌, 우 방향으로 진행\n",
+        "\n",
+        "            for a, b, c in ([-1, 0, 0], [1, 0, 0], [0, 1, 0], [0, -1, 0], [0, 0, 1], [0, 0, -1]):\n",
+        "                if 0 <= k+a and k+a < h and 0 <= i+b and i+b < n and 0 <= j+c and j+c < m:       # 해당 방향 요소가 배열 안에있고\n",
+        "                    if not s[k+a][i+b][j+c] and not visited[k+a][i+b][j+c]:    # 길인 '1' 이고 방문하지 않았다면\n",
+        "                        # 해당 방향 위치를 queue에 append\n",
+        "                        queue.append([k+a, i+b, j+c])\n",
+        "                        visited[k+a][i+b][j+c] = True\n",
+        "                        e += 1                        # 해당 방향 방문 표시\n",
+        "            f += 1\n",
+        "\n",
+        "    return t\n",
+        "\n",
+        "\n",
+        "res = bfs(ripen, -1)\n",
+        "\n",
+        "can = True\n",
+        "for i in visited:\n",
+        "    if not can:\n",
+        "        break\n",
+        "\n",
+        "    for j in i:\n",
+        "        if False in j:\n",
+        "            can = False\n",
+        "            break\n",
+        "\n",
+        "if can:\n",
+        "    if not res:\n",
+        "        print(0)\n",
+        "    else:\n",
+        "        print(res)\n",
+        "\n",
+        "else:\n",
+        "    print(-1)\n"
       ],
       "execution_count": null,
       "outputs": []
