Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -168,7 +168,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyNJFJoNJ3VotNlRDu02qvt1",
+      "authorship_tag": "ABX9TyP11LXUtzUApRz0EEL/rg++",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7895,19 +7895,80 @@
         "id": "itMtijYsBFg-"
       },
       "source": [
-        "#### "
+        "####  1697번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ql5N8HwEBFg_"
+        "id": "ql5N8HwEBFg_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5544a233-b435-4ca2-f650-982c0fc74ff5"
       },
       "source": [
-        ""
+        "n, k =map(int, input().split())\n",
+        "\n",
+        "t = [False] * 100001\n",
+        "t[n] = True\n",
+        "\n",
+        "res = 0\n",
+        "\n",
+        "queue = [n-1, n+1, 2*n]\n",
+        "\n",
+        "s, e = 0, 4\n",
+        "can = True\n",
+        "\n",
+        "while can:\n",
+        "    if s >= e:\n",
+        "        break\n",
+        "    print(t[:20])\n",
+        "    res += 1\n",
+        "    for _ in range(e - s):\n",
+        "        if not can :\n",
+        "            break\n",
+        "        print(s,e,queue)\n",
+        "        for j in [queue[s]+1, queue[s]-1, queue[s]*2]:\n",
+        "            if 0 <= j and j <= 100000 and not t[j]:\n",
+        "                queue.append(j)\n",
+        "                t[j] = True\n",
+        "                e += 1\n",
+        "\n",
+        "                if t[k]:\n",
+        "                    print(res)\n",
+        "                    can = False\n",
+        "                    break\n",
+        "\n",
+        "        s += 1\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5 17\n",
+            "[False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False, False, False, False, False]\n",
+            "0 4 [4, 6, 10]\n",
+            "1 6 [4, 6, 10, 3, 8]\n",
+            "2 8 [4, 6, 10, 3, 8, 7, 12]\n",
+            "3 11 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20]\n",
+            "[False, False, True, True, True, True, True, True, True, True, False, True, True, False, False, False, False, False, False, False]\n",
+            "4 14 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6]\n",
+            "5 15 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6, 16]\n",
+            "6 16 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6, 16, 14]\n",
+            "7 18 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6, 16, 14, 13, 24]\n",
+            "8 20 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6, 16, 14, 13, 24, 10, 22]\n",
+            "9 21 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6, 16, 14, 13, 24, 10, 22, 18]\n",
+            "10 24 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6, 16, 14, 13, 24, 10, 22, 18, 21, 19, 40]\n",
+            "11 24 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6, 16, 14, 13, 24, 10, 22, 18, 21, 19, 40]\n",
+            "12 25 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6, 16, 14, 13, 24, 10, 22, 18, 21, 19, 40, 1]\n",
+            "13 25 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6, 16, 14, 13, 24, 10, 22, 18, 21, 19, 40, 1]\n",
+            "2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
