Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -168,7 +168,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyP11LXUtzUApRz0EEL/rg++",
+      "authorship_tag": "ABX9TyP/L8LOpQn4crO6tPWFhSbJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7901,11 +7901,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ql5N8HwEBFg_",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "5544a233-b435-4ca2-f650-982c0fc74ff5"
+        "id": "ql5N8HwEBFg_"
       },
       "source": [
         "n, k =map(int, input().split())\n",
@@ -7915,60 +7911,29 @@
         "\n",
         "res = 0\n",
         "\n",
-        "queue = [n-1, n+1, 2*n]\n",
+        "queue = [n]\n",
         "\n",
-        "s, e = 0, 4\n",
-        "can = True\n",
+        "s, e = 0, 1\n",
         "\n",
-        "while can:\n",
+        "while True:\n",
         "    if s >= e:\n",
         "        break\n",
-        "    print(t[:20])\n",
-        "    res += 1\n",
+        "\n",
+        "    if t[k]:\n",
+        "        print(res)\n",
+        "        break\n",
+        "\n",
         "    for _ in range(e - s):\n",
-        "        if not can :\n",
-        "            break\n",
-        "        print(s,e,queue)\n",
         "        for j in [queue[s]+1, queue[s]-1, queue[s]*2]:\n",
         "            if 0 <= j and j <= 100000 and not t[j]:\n",
         "                queue.append(j)\n",
         "                t[j] = True\n",
         "                e += 1\n",
-        "\n",
-        "                if t[k]:\n",
-        "                    print(res)\n",
-        "                    can = False\n",
-        "                    break\n",
-        "\n",
-        "        s += 1\n"
+        "        s += 1\n",
+        "    res += 1"
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "5 17\n",
-            "[False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False, False, False, False, False]\n",
-            "0 4 [4, 6, 10]\n",
-            "1 6 [4, 6, 10, 3, 8]\n",
-            "2 8 [4, 6, 10, 3, 8, 7, 12]\n",
-            "3 11 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20]\n",
-            "[False, False, True, True, True, True, True, True, True, True, False, True, True, False, False, False, False, False, False, False]\n",
-            "4 14 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6]\n",
-            "5 15 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6, 16]\n",
-            "6 16 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6, 16, 14]\n",
-            "7 18 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6, 16, 14, 13, 24]\n",
-            "8 20 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6, 16, 14, 13, 24, 10, 22]\n",
-            "9 21 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6, 16, 14, 13, 24, 10, 22, 18]\n",
-            "10 24 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6, 16, 14, 13, 24, 10, 22, 18, 21, 19, 40]\n",
-            "11 24 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6, 16, 14, 13, 24, 10, 22, 18, 21, 19, 40]\n",
-            "12 25 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6, 16, 14, 13, 24, 10, 22, 18, 21, 19, 40, 1]\n",
-            "13 25 [4, 6, 10, 3, 8, 7, 12, 11, 9, 20, 4, 2, 6, 16, 14, 13, 24, 10, 22, 18, 21, 19, 40, 1]\n",
-            "2\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -7976,19 +7941,72 @@
         "id": "7dWbBLClBFkC"
       },
       "source": [
-        "#### "
+        "####  2206번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kBOkkInlBFkC"
+        "id": "kBOkkInlBFkC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2f1e79c7-1fa4-4aad-9298-30cb9acb0c51"
       },
       "source": [
-        ""
+        "### pypy3만 통과함\n",
+        "import sys\n",
+        "from collections import deque\n",
+        "\n",
+        "n,m = map(int, input().split())\n",
+        "\n",
+        "l = []\n",
+        "for _ in range(n):\n",
+        "    l.append(sys.stdin.readline())\n",
+        "\n",
+        "visited = [[2] * m for _ in range(n)] # 2 방문 안함, 0이면 방문, 1이면 벽을 하나 뚫고옴\n",
+        "visited[0][0] = 0\n",
+        "\n",
+        "def dfs():  # 함수형으로 만드니까 python3도 성공 \n",
+        "    res = 0\n",
+        "    dx = [1,-1,0,0]\n",
+        "    dy = [0,0,1,-1]\n",
+        "    queue = deque([[0,0]])\n",
+        "    while queue:\n",
+        "\n",
+        "        res += 1\n",
+        "        for _ in range(len(queue)):     \n",
+        "            x, y = queue.popleft()\n",
+        "            if x == n-1 and y == m-1:\n",
+        "                return res\n",
+        "\n",
+        "            for i in range(4):\n",
+        "                nx, my = x + dx[i], y + dy[i]\n",
+        "                if 0 <= nx < n and 0 <= my < m:\n",
+        "                    if l[nx][my] == '0' and visited[nx][my] > visited[x][y]:\n",
+        "                        visited[nx][my] = visited[x][y]\n",
+        "                        queue.append([nx,my])\n",
+        "                    elif l[nx][my] == '1' and not visited[x][y]:\n",
+        "                        visited[nx][my] = visited[x][y] + 1\n",
+        "                        queue.append([nx,my])\n",
+        "    return -1\n",
+        "\n",
+        "print(dfs())"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3 5\n",
+            "01000\n",
+            "00011\n",
+            "11110\n",
+            "-1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -8002,13 +8020,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pJrz5PBVBFnC"
+        "id": "pJrz5PBVBFnC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b78cefcc-1470-4244-9a87-c8ed1cc7652f"
       },
       "source": [
-        ""
+        "0 <= 3 < 4"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
     },
     {
       "cell_type": "markdown",
