Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -168,7 +168,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyP/L8LOpQn4crO6tPWFhSbJ",
+      "authorship_tag": "ABX9TyN4ZjbVMAOH4+OElMkiBGYn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7947,11 +7947,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kBOkkInlBFkC",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2f1e79c7-1fa4-4aad-9298-30cb9acb0c51"
+        "id": "kBOkkInlBFkC"
       },
       "source": [
         "### pypy3만 통과함\n",
@@ -7993,20 +7989,8 @@
         "\n",
         "print(dfs())"
       ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3 5\n",
-            "01000\n",
-            "00011\n",
-            "11110\n",
-            "-1\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8014,34 +7998,53 @@
         "id": "_k8dhUVLBFnC"
       },
       "source": [
-        "#### "
+        "####  7562번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pJrz5PBVBFnC",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b78cefcc-1470-4244-9a87-c8ed1cc7652f"
+        "id": "pJrz5PBVBFnC"
       },
       "source": [
-        "0 <= 3 < 4"
+        "dx, dy = [-2,-2,-1,-1,1,1,2,2], [-1,1,-2,2,-2,2,-1,1]\n",
+        "\n",
+        "def dfs(start, end, n):\n",
+        "    if start == end:\n",
+        "        return 0\n",
+        "\n",
+        "    m = [[False] * n for _ in range(n)]\n",
+        "    queue = [start]\n",
+        "    m[start[0]][start[1]] = True\n",
+        "\n",
+        "    s, e = 0, 1\n",
+        "    res = 0\n",
+        "    while s < e:\n",
+        "        if m[end[0]][end[1]]:\n",
+        "            return res\n",
+        "\n",
+        "        res += 1\n",
+        "        for _ in range(e-s):\n",
+        "            i,j = queue[s]\n",
+        "            \n",
+        "            for k in range(8):\n",
+        "                di, dj = i + dx[k], j + dy[k]\n",
+        "                if 0 <= di < n and 0 <= dj < n and not m[di][dj]:\n",
+        "                    m[di][dj] = True\n",
+        "                    queue.append([di,dj])\n",
+        "                    e += 1\n",
+        "            s += 1\n",
+        "    return 0\n",
+        "\n",
+        "for _ in range(int(input())):\n",
+        "    n = int(input())\n",
+        "    start = list(map(int, input().split()))\n",
+        "    end = list(map(int, input().split()))\n",
+        "\n",
+        "    print(dfs(start, end, n))"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 29
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
