Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -168,7 +168,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyN4ZjbVMAOH4+OElMkiBGYn",
+      "authorship_tag": "ABX9TyNp4PzY50+HIlGFb4212WE7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8052,7 +8052,7 @@
         "id": "4jMaIQKBBFqM"
       },
       "source": [
-        "#### "
+        "####  1707번"
       ]
     },
     {
@@ -8061,7 +8061,32 @@
         "id": "pMbSw3yQBFqM"
       },
       "source": [
-        ""
+        "for _ in range(int(input())):\n",
+        "    v, e = map(int, input().split())\n",
+        "\n",
+        "    vertex = [[False]*v for _ in range(v)] \n",
+        "    visited = [-1]* v # # 1 상위노드 0 방문 함, -1 방문 안함\n",
+        "    for _ in range(e):\n",
+        "        a, b = map(int, input())\n",
+        "        vetex[a-1][b-1] = True\n",
+        "        vetex[b-1][a-1] = True\n",
+        "    \n",
+        "    can = False\n",
+        "\n",
+        "    for i in range(v):\n",
+        "        if can:\n",
+        "            break\n",
+        "\n",
+        "        if sum(vertex[i]) == 2:\n",
+        "            visited[i] = 1\n",
+        "            for j in range(v):\n",
+        "                vertex[]\n",
+        "\n",
+        "    \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -9366,13 +9391,31 @@
         "id": "MkeGXGAL5ohl"
       },
       "source": [
-        "   #### "
+        "   ####  1813번"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "n = int(input())\n",
+        "s = list(map(int, input().split()))\n",
+        "\n",
+        "s.sort(reverse= True)\n",
+        "\n",
+        "\n",
+        "def find(n,s):\n",
+        "    for i in range(n,-1,-1):\n",
+        "        res = 0\n",
+        "        for j in s:\n",
+        "            if i == j:\n",
+        "                res += 1\n",
+        "        \n",
+        "        if res == i:\n",
+        "            return res\n",
+        "    \n",
+        "    return -1\n",
+        "\n",
+        "print(find(n,s))"
       ],
       "metadata": {
         "id": "lQA5R2MD5ohm"
