Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -168,7 +168,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyNp4PzY50+HIlGFb4212WE7",
+      "authorship_tag": "ABX9TyM8eMlwIV5M7C8oo49TtNE8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8058,38 +8058,115 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pMbSw3yQBFqM"
+        "id": "pMbSw3yQBFqM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "39113762-e240-4e3b-a089-b36d8c3bd772"
       },
       "source": [
+        "import sys\n",
+        "\n",
+        "def dfs(x, x_list):\n",
+        "    global visited, can\n",
+        "\n",
+        "    if visited[x] == 1:\n",
+        "        pass\n",
+        "    else:\n",
+        "        visited[x] = 0\n",
+        "\n",
+        "    \n",
+        "\n",
+        "    for i in x_list:\n",
+        "        #print(visited, i, x_list) # [1, 0, 0, 0, 0, -1] 5 [2, 5]\n",
+        "        if not can:\n",
+        "            break\n",
+        "\n",
+        "        if visited[i] == 1:\n",
+        "            visited[x] = -1\n",
+        "        elif visited[i] == 0:\n",
+        "            can = False\n",
+        "        else:\n",
+        "            t = []\n",
+        "            for j in verte2x[i]:\n",
+        "                if visited[j] != -1:\n",
+        "                    t.append(j) \n",
+        "            #print('dfs',visited, i, t)\n",
+        "            dfs(i, t)\n",
+        "\n",
+        "\n",
         "for _ in range(int(input())):\n",
         "    v, e = map(int, input().split())\n",
         "\n",
-        "    vertex = [[False]*v for _ in range(v)] \n",
-        "    visited = [-1]* v # # 1 상위노드 0 방문 함, -1 방문 안함\n",
-        "    for _ in range(e):\n",
-        "        a, b = map(int, input())\n",
-        "        vetex[a-1][b-1] = True\n",
-        "        vetex[b-1][a-1] = True\n",
+        "    vertex = [[] for _ in range(v)] \n",
         "    \n",
-        "    can = False\n",
+        "    for _ in range(e):\n",
+        "        a, b = map(int, input().split())\n",
+        "        vertex[a-1].append(b-1)\n",
+        "        vertex[b-1].append(a-1)\n",
+        "\n",
+        "    visited = [-1]* v # 1 상위노드 0 방문 함, -1 방문 안함\n",
+        "    can = True # 이분 그래프 여부\n",
         "\n",
         "    for i in range(v):\n",
-        "        if can:\n",
-        "            break\n",
-        "\n",
-        "        if sum(vertex[i]) == 2:\n",
+        "        if visited[i] == -1:\n",
         "            visited[i] = 1\n",
-        "            for j in range(v):\n",
-        "                vertex[]\n",
+        "            dfs(i, vertex[i])\n",
         "\n",
-        "    \n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "    if can:\n",
+        "        print('YES')\n",
+        "    else:\n",
+        "        print('NO')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "3 3\n",
+            "1 2\n",
+            "2 3\n",
+            "1 3\n",
+            "YES\n",
+            "2 1\n",
+            "1 2\n",
+            "YES\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1\n",
+        "6 6\n",
+        "1 3\n",
+        "3 4\n",
+        "4 2\n",
+        "2 5\n",
+        "5 6\n",
+        "6 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tnWr_KutncDy",
+        "outputId": "4a27b44f-6874-437b-b3fb-80ab5a0e9e1a"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2]\n",
+            "[2]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
