--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -132,7 +132,6 @@
         "_jfJBLzSDWEK",
         "oPD8cNOfDWHz",
         "z02YtuKLBZ4I",
-        "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
         "kg3C85P2pkCh",
@@ -168,7 +167,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyM8eMlwIV5M7C8oo49TtNE8",
+      "authorship_tag": "ABX9TyP22viNYYqnga6S7t/8ZSSu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7950,7 +7949,6 @@
         "id": "kBOkkInlBFkC"
       },
       "source": [
-        "### pypy3만 통과함\n",
         "import sys\n",
         "from collections import deque\n",
         "\n",
@@ -8058,42 +8056,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pMbSw3yQBFqM",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "39113762-e240-4e3b-a089-b36d8c3bd772"
+        "id": "pMbSw3yQBFqM"
       },
       "source": [
+        "# binary tree가 아님. => 문제에 대한 이해가 부족하여 오래걸림(쉬운 문제였음)\n",
+        "# Bipartite Graph에 대해 서칭을 해보니 간단하게 인접한 node들을 다른 색으로 색칠하는 문제\n",
         "import sys\n",
+        "sys.setrecursionlimit(10**6)\n",
+        "input = sys.stdin.readline\n",
         "\n",
-        "def dfs(x, x_list):\n",
+        "def dfs(x, group):\n",
         "    global visited, can\n",
+        "    visited[x] = group\n",
         "\n",
-        "    if visited[x] == 1:\n",
-        "        pass\n",
-        "    else:\n",
-        "        visited[x] = 0\n",
-        "\n",
-        "    \n",
-        "\n",
-        "    for i in x_list:\n",
-        "        #print(visited, i, x_list) # [1, 0, 0, 0, 0, -1] 5 [2, 5]\n",
+        "    for i in vertex[x]:\n",
         "        if not can:\n",
         "            break\n",
         "\n",
-        "        if visited[i] == 1:\n",
-        "            visited[x] = -1\n",
-        "        elif visited[i] == 0:\n",
-        "            can = False\n",
+        "        if not visited[i]:\n",
+        "            dfs(i, -group)\n",
         "        else:\n",
-        "            t = []\n",
-        "            for j in verte2x[i]:\n",
-        "                if visited[j] != -1:\n",
-        "                    t.append(j) \n",
-        "            #print('dfs',visited, i, t)\n",
-        "            dfs(i, t)\n",
-        "\n",
+        "            if visited[i] == visited[x]:\n",
+        "                can = False \n",
         "\n",
         "for _ in range(int(input())):\n",
         "    v, e = map(int, input().split())\n",
@@ -8105,68 +8089,20 @@
         "        vertex[a-1].append(b-1)\n",
         "        vertex[b-1].append(a-1)\n",
         "\n",
-        "    visited = [-1]* v # 1 상위노드 0 방문 함, -1 방문 안함\n",
+        "    visited = [0]* v # 1 상위노드 0 방문 함, -1 방문 안함\n",
         "    can = True # 이분 그래프 여부\n",
         "\n",
         "    for i in range(v):\n",
-        "        if visited[i] == -1:\n",
-        "            visited[i] = 1\n",
-        "            dfs(i, vertex[i])\n",
+        "        if not visited[i]:\n",
+        "            dfs(i, 1)\n",
         "\n",
         "    if can:\n",
         "        print('YES')\n",
         "    else:\n",
         "        print('NO')"
       ],
-      "execution_count": 57,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2\n",
-            "3 3\n",
-            "1 2\n",
-            "2 3\n",
-            "1 3\n",
-            "YES\n",
-            "2 1\n",
-            "1 2\n",
-            "YES\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "1\n",
-        "6 6\n",
-        "1 3\n",
-        "3 4\n",
-        "4 2\n",
-        "2 5\n",
-        "5 6\n",
-        "6 1"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "tnWr_KutncDy",
-        "outputId": "4a27b44f-6874-437b-b3fb-80ab5a0e9e1a"
-      },
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[2]\n",
-            "[2]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8174,7 +8110,7 @@
         "id": "z02YtuKLBZ4I"
       },
       "source": [
-        "### 단계 : ===========**"
+        "### 단계 : 최단경로==========="
       ]
     },
     {
@@ -8183,13 +8119,248 @@
         "id": "OgYoF6xMBZ4I"
       },
       "source": [
+        "####  1753번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ThAug-rvBZ4I",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ac39e451-f2d8-4de1-f05f-70b122dd9829"
+      },
+      "source": [
+        "# 다익스트라 알고리즘\n",
+        "import sys\n",
+        "import heapq\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "v, e = map(int, input().split())\n",
+        "k = int(input())\n",
+        "m = [[] for _ in range(v+1)]\n",
+        "for _ in range(e):\n",
+        "    a, b, c = map(int, input().split())\n",
+        "    m[a].append([b,c])\n",
+        "\n",
+        "res = [float('inf')] * (v+1)\n",
+        "res[k] = 0\n",
+        "\n",
+        "q = []\n",
+        "heapq.heappush(q, (0, k))\n",
+        "\n",
+        "while q:\n",
+        "    dist, now = heapq.heappop(q)\n",
+        "    if res[now] < dist:\n",
+        "        continue\n",
+        "    for i in m[now]:\n",
+        "        w = dist + i[1]\n",
+        "        if w < res[i[0]]:\n",
+        "            res[i[0]] = w\n",
+        "            heapq.heappush(q, (w, i[0]))\n",
+        "\n",
+        "\n",
+        "for i in range(1,v+1):\n",
+        "    if res[i] == float('inf'):\n",
+        "        print('INF')\n",
+        "    else:\n",
+        "        print(res[i])"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5 6\n",
+            "1\n",
+            "5 1 1\n",
+            "1 2 2\n",
+            "1 3 3\n",
+            "2 3 4\n",
+            "2 4 5\n",
+            "3 4 6\n",
+            "0\n",
+            "2\n",
+            "3\n",
+            "7\n",
+            "INF\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9htQLovxP2yg"
+      },
+      "source": [
         "#### "
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ThAug-rvBZ4I"
+        "id": "61w_wZ-mP2yg"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "j8z3OKJyP21N"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q0auUwOEP21O"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "giug622TP235"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gzvh5NUWP236"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "i_oKdACOP26K"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bV5-bLQ5P26L"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "871jZvxzP29P"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YDpDNJ_gP29P"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Sq0gmSQ_P4Py"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T-dhCwq5P4Py"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_YraW6oaPx0y"
+      },
+      "source": [
+        "### 단계 : ===========**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Om29NmS_Px00"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oZSM6np0Px01"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eWsnwFm3PyO6"
+      },
+      "source": [
+        "### 단계 : ===========**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8JfFjnuZPyO6"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uIzAR78kPyO7"
       },
       "source": [
         ""
