--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -131,7 +131,6 @@
         "Xc2rVYZ1DWAq",
         "_jfJBLzSDWEK",
         "oPD8cNOfDWHz",
-        "z02YtuKLBZ4I",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
         "kg3C85P2pkCh",
@@ -167,7 +166,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyP22viNYYqnga6S7t/8ZSSu",
+      "authorship_tag": "ABX9TyMMNA5D2KXN+vnHGEP6s8xp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8125,11 +8124,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ThAug-rvBZ4I",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ac39e451-f2d8-4de1-f05f-70b122dd9829"
+        "id": "ThAug-rvBZ4I"
       },
       "source": [
         "# 다익스트라 알고리즘\n",
@@ -8167,28 +8162,8 @@
         "    else:\n",
         "        print(res[i])"
       ],
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "5 6\n",
-            "1\n",
-            "5 1 1\n",
-            "1 2 2\n",
-            "1 3 3\n",
-            "2 3 4\n",
-            "2 4 5\n",
-            "3 4 6\n",
-            "0\n",
-            "2\n",
-            "3\n",
-            "7\n",
-            "INF\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8196,19 +8171,78 @@
         "id": "9htQLovxP2yg"
       },
       "source": [
-        "#### "
+        "####  (***)1504번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "61w_wZ-mP2yg"
+        "id": "61w_wZ-mP2yg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "21072a6b-f37e-47b9-c4d3-b0e2a1e21d25"
       },
       "source": [
-        ""
+        "import sys\n",
+        "import heapq\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "v, e = map(int, input().split())\n",
+        "m = [[] for _ in range(v+1)]\n",
+        "for _ in range(e):\n",
+        "    a, b, c = map(int, input().split())\n",
+        "    m[a].append([b,c])\n",
+        "    m[b].append([a,c])\n",
+        "\n",
+        "v1, v2 = map(int, input().split())\n",
+        "\n",
+        "def dijkstra(start):\n",
+        "    res = [int(1e9) for _ in range(v+1)]\n",
+        "    res[start] = 0\n",
+        "\n",
+        "    q = []\n",
+        "    heapq.heappush(q, (0, start))\n",
+        "    while q:\n",
+        "        dist, now = heapq.heappop(q)\n",
+        "\n",
+        "        for i in m[now]:\n",
+        "            w = dist + i[1]\n",
+        "            if w < res[i[0]]:\n",
+        "                res[i[0]] = w\n",
+        "                heapq.heappush(q, (w, i[0]))\n",
+        "    return res\n",
+        "\n",
+        "# 1 -> n, v1, v2를 거침\n",
+        "# 1 -> v1 -> v2 -> n\n",
+        "# 1 -> v2 -> v1 -> n\n",
+        "\n",
+        "start_res = dijkstra(1) \n",
+        "v1_res = dijkstra(v1)\n",
+        "v2_res = dijkstra(v2)\n",
+        "\n",
+        "result = min(start_res[v1] + v1_res[v2] + v2_res[v],\\\n",
+        "             start_res[v2] + v2_res[v1] + v1_res[v])\n",
+        "print(result if result < int(1e9) else -1)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4 6\n",
+            "1 2 3\n",
+            "2 3 3\n",
+            "3 4 1\n",
+            "1 3 5\n",
+            "2 4 5\n",
+            "1 4 4\n",
+            "2 3\n",
+            "7\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -8222,13 +8256,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Q0auUwOEP21O"
+        "id": "Q0auUwOEP21O",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 174
+        },
+        "outputId": "a746e042-519f-4261-df20-904a1be154ef"
       },
       "source": [
-        ""
+        "int('inf')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-f859f82dc24a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'inf'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'inf'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
