Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -166,7 +166,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyMMNA5D2KXN+vnHGEP6s8xp",
+      "authorship_tag": "ABX9TyMZHg5ZkWj2/rEBGYjKg0Ux",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8177,11 +8177,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "61w_wZ-mP2yg",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "21072a6b-f37e-47b9-c4d3-b0e2a1e21d25"
+        "id": "61w_wZ-mP2yg"
       },
       "source": [
         "import sys\n",
@@ -8225,24 +8221,8 @@
         "             start_res[v2] + v2_res[v1] + v1_res[v])\n",
         "print(result if result < int(1e9) else -1)"
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "4 6\n",
-            "1 2 3\n",
-            "2 3 3\n",
-            "3 4 1\n",
-            "1 3 5\n",
-            "2 4 5\n",
-            "1 4 4\n",
-            "2 3\n",
-            "7\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8250,7 +8230,7 @@
         "id": "j8z3OKJyP21N"
       },
       "source": [
-        "#### "
+        "####  9370번"
       ]
     },
     {
@@ -8258,25 +8238,81 @@
       "metadata": {
         "id": "Q0auUwOEP21O",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 174
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a746e042-519f-4261-df20-904a1be154ef"
+        "outputId": "f580ee1d-f666-4a8b-9976-2b832a0f6403"
       },
       "source": [
-        "int('inf')"
+        "import sys\n",
+        "import heapq\n",
+        "#input = sys.stdin.readline\n",
+        "\n",
+        "def dijkstra(start):\n",
+        "    dp = [int(1e9) for _ in range(n+1)]\n",
+        "    dp[start] = 0\n",
+        "\n",
+        "    q = []\n",
+        "    heapq.heappush(q, (0, start))\n",
+        "    while q:\n",
+        "        dist, now = heapq.heappop(q)\n",
+        "        if dp[now] < dist:\n",
+        "            continue\n",
+        "        for i in l[now]:\n",
+        "            w = dist + i[1]\n",
+        "            if w < dp[i[0]]:\n",
+        "                dp[i[0]] = w\n",
+        "                heapq.heappush(q, (w, i[0]))\n",
+        "    return dp\n",
+        "\n",
+        "for _ in range(int(input())):\n",
+        "    n, m, t = map(int,input().split()) # 교차로, 도로, 목적지 후보\n",
+        "    s, g, h = map(int,input().split()) # 예술가들의 출발지, g와 h교차로 사이\n",
+        "    \n",
+        "    l = [[] for _ in range(n+1)]\n",
+        "    for _ in range(m):\n",
+        "        a, b, d = map(int,input().split())\n",
+        "        l[a].append([b,d])\n",
+        "        l[b].append([a,d])\n",
+        "    \n",
+        "    s_ = dijkstra(s)\n",
+        "    g_ = dijkstra(g)\n",
+        "    h_ = dijkstra(h)\n",
+        "\n",
+        "    res = []\n",
+        "    for _ in range(t):\n",
+        "        x = int(input())\n",
+        "        x_ = dijkstra(x)\n",
+        "        x_min = min(s_[g] + g_[h] + h_[x],\n",
+        "                    s_[h] + h_[g] + g_[x],\n",
+        "                    g_[s] + s_[x] + x_[h],\n",
+        "                    h_[s] + s_[x] + x_[g])\n",
+        "        if x_min <= s_[x]:\n",
+        "            res.append(x)\n",
+        "    \n",
+        "    res.sort()\n",
+        "    print(*res)"
       ],
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-f859f82dc24a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'inf'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'inf'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "6 9 2\n",
+            "2 3 1\n",
+            "1 2 1\n",
+            "1 3 3\n",
+            "2 4 4\n",
+            "2 5 5\n",
+            "3 4 3\n",
+            "3 6 2\n",
+            "4 5 4\n",
+            "4 6 3\n",
+            "5 6 7\n",
+            "5\n",
+            "6\n",
+            "6\n"
           ]
         }
       ]
