Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -166,7 +166,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyMZHg5ZkWj2/rEBGYjKg0Ux",
+      "authorship_tag": "ABX9TyMlSR0kY/+/JH/wPt/9oS4V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8236,16 +8236,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Q0auUwOEP21O",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f580ee1d-f666-4a8b-9976-2b832a0f6403"
+        "id": "Q0auUwOEP21O"
       },
       "source": [
         "import sys\n",
         "import heapq\n",
-        "#input = sys.stdin.readline\n",
+        "input = sys.stdin.readline\n",
         "\n",
         "def dijkstra(start):\n",
         "    dp = [int(1e9) for _ in range(n+1)]\n",
@@ -8292,30 +8288,8 @@
         "    res.sort()\n",
         "    print(*res)"
       ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n",
-            "6 9 2\n",
-            "2 3 1\n",
-            "1 2 1\n",
-            "1 3 3\n",
-            "2 4 4\n",
-            "2 5 5\n",
-            "3 4 3\n",
-            "3 6 2\n",
-            "4 5 4\n",
-            "4 6 3\n",
-            "5 6 7\n",
-            "5\n",
-            "6\n",
-            "6\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8323,7 +8297,7 @@
         "id": "giug622TP235"
       },
       "source": [
-        "#### "
+        "####  (***)11657번"
       ]
     },
     {
@@ -8332,7 +8306,42 @@
         "id": "gzvh5NUWP236"
       },
       "source": [
-        ""
+        "### Bellman - Ford\n",
+        "# youtu.be/Ppimbaxm8d8 동빈나\n",
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "n, m = map(int, input().split())\n",
+        "\n",
+        "s = [[] for _ in range(n+1)]\n",
+        "for _ in range(m):\n",
+        "    a, b, c = map(int, input().split())\n",
+        "    s[a].append([b, c])\n",
+        "\n",
+        "def BellmanFord(start):\n",
+        "    global minus_cycle\n",
+        "    dp = [int(1e9) for _ in range(n+1)]\n",
+        "    dp[start] = 0\n",
+        "\n",
+        "    for i in range(1,n+1):\n",
+        "        for j in range(1,n+1):\n",
+        "            for station, time in s[j]:\n",
+        "                t = dp[j] + time\n",
+        "                if dp[station] > t and dp[j] != int(1e9):\n",
+        "                    dp[station] = t\n",
+        "                    if i == n:\n",
+        "                        minus_cycle = True\n",
+        "    \n",
+        "    return dp\n",
+        "\n",
+        "minus_cycle = False\n",
+        "res = BellmanFord(1)\n",
+        "\n",
+        "if not minus_cycle:\n",
+        "    for i in range(2,n+1):\n",
+        "        print(res[i] if res[i] < int(1e9) else -1)\n",
+        "else:\n",
+        "    print(-1)"
       ],
       "execution_count": null,
       "outputs": []
