--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -166,7 +166,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyMlSR0kY/+/JH/wPt/9oS4V",
+      "authorship_tag": "ABX9TyMfi74bx7tZ1sTw9FL18RtN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8352,19 +8352,78 @@
         "id": "i_oKdACOP26K"
       },
       "source": [
-        "#### "
+        "####  11404번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bV5-bLQ5P26L"
+        "id": "bV5-bLQ5P26L",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6c0b616a-eef3-4b8e-ceb8-a0f4ac2b0d79"
       },
       "source": [
-        ""
+        "### 플로이드–와샬\n",
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "n = int(input())\n",
+        "m = int(input())\n",
+        "\n",
+        "w = [[int(1e9)]*n for _ in range(n)]\n",
+        "\n",
+        "for i in range(m):\n",
+        "    a, b, c = map(int, input().split())\n",
+        "    w[a-1][b-1] = min(w[a-1][b-1], c) # 노선이 여러개 일 수 있다.\n",
+        "    \n",
+        "    if i < n:\n",
+        "        w[i][i] = 0\n",
+        "        \n",
+        "\n",
+        "dp = [w for _ in range(n)]\n",
+        "\n",
+        "for k in range(n): # k차원이지만 dp 변형 가능.\n",
+        "    for i in range(n):\n",
+        "        for j in range(n):\n",
+        "            dp[k][i][j] = min(dp[k-1][i][j], dp[k-1][i][k] + dp[k-1][k][j]) # 중요 부분\n",
+        "\n",
+        "for i in dp[n-1]:\n",
+        "    for j in i:\n",
+        "        print(j if j < int(1e9) else 0, end=' ')\n",
+        "    print()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "14\n",
+            "1 2 2\n",
+            "1 3 3\n",
+            "1 4 1\n",
+            "1 5 10\n",
+            "2 4 2\n",
+            "3 4 1\n",
+            "3 5 1\n",
+            "4 5 3\n",
+            "3 5 10\n",
+            "3 1 8\n",
+            "1 4 2\n",
+            "5 1 7\n",
+            "3 4 2\n",
+            "5 2 4\n",
+            "0 2 3 2 5 \n",
+            "12 0 15 2 5 \n",
+            "8 9 0 2 5 \n",
+            "10 7 13 0 3 \n",
+            "7 4 10 6 0 \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
