--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -166,7 +166,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyMfi74bx7tZ1sTw9FL18RtN",
+      "authorship_tag": "ABX9TyONn2x9shcCN0UJ6WipNHVS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8358,11 +8358,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bV5-bLQ5P26L",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6c0b616a-eef3-4b8e-ceb8-a0f4ac2b0d79"
+        "id": "bV5-bLQ5P26L"
       },
       "source": [
         "### 플로이드–와샬\n",
@@ -8394,36 +8390,8 @@
         "        print(j if j < int(1e9) else 0, end=' ')\n",
         "    print()"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "5\n",
-            "14\n",
-            "1 2 2\n",
-            "1 3 3\n",
-            "1 4 1\n",
-            "1 5 10\n",
-            "2 4 2\n",
-            "3 4 1\n",
-            "3 5 1\n",
-            "4 5 3\n",
-            "3 5 10\n",
-            "3 1 8\n",
-            "1 4 2\n",
-            "5 1 7\n",
-            "3 4 2\n",
-            "5 2 4\n",
-            "0 2 3 2 5 \n",
-            "12 0 15 2 5 \n",
-            "8 9 0 2 5 \n",
-            "10 7 13 0 3 \n",
-            "7 4 10 6 0 \n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8431,19 +8399,78 @@
         "id": "871jZvxzP29P"
       },
       "source": [
-        "#### "
+        "####  (*****)10217번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YDpDNJ_gP29P"
+        "id": "YDpDNJ_gP29P",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a82850f1-5563-4351-a435-4aec55a85c78"
       },
       "source": [
-        ""
+        "### https://codekodo.tistory.com/57\n",
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def dijkstra(start):\n",
+        "    global m, n, s\n",
+        "\n",
+        "    dp = [[int(1e9)] * (m+1) for _ in range(n+1)]\n",
+        "    dp[start][0] = 0\n",
+        "\n",
+        "    for j in range(m+1):\n",
+        "        for i in range(1, n+1):\n",
+        "            if dp[i][j] == int(1e9):\n",
+        "                continue\n",
+        "            \n",
+        "            dist = dp[i][j]\n",
+        "            for position, cost, time in s[i]:\n",
+        "                if j + cost > m:\n",
+        "                    continue\n",
+        "                \n",
+        "                dp[position][j + cost] = min(dp[position][j + cost], dist + time)\n",
+        "\n",
+        "    return dp\n",
+        "\n",
+        "for _ in range(int(input())):\n",
+        "    n, m, k = map(int, input().split())\n",
+        "\n",
+        "    s = [[] for _ in range(n+1)]\n",
+        "    for _ in range(k):\n",
+        "        u, v, c, d = map(int, input().split())\n",
+        "        s[u].append([v,c,d])\n",
+        "    \n",
+        "    res = dijkstra(1)\n",
+        "    if min(res[n]) == int(1e9):\n",
+        "        print('Poor KCM')\n",
+        "    else:\n",
+        "        print(min(res[n]))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "3 100 3\n",
+            "1 2 1 1\n",
+            "2 3 1 1\n",
+            "1 3 3 30\n",
+            "2\n",
+            "4 10 4\n",
+            "1 2 5 3\n",
+            "2 3 5 4\n",
+            "3 4 1 5\n",
+            "1 3 10 6\n",
+            "Poor KCM\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
